# roumi

./: .gitignore  Cargo.toml
.github/workflows/: CI.yml
crates/data_preparation/: Cargo.toml
crates/data_preparation/benches/: dataloader.rs
crates/data_preparation/src/: collator.rs  dataloader.rs  dataset.rs  error.rs  info.rs  lib.rs  main.rs  minibatch.rs  safetensors_dataset.rs
crates/data_preparation/tests/: common.rs  dataset_tests.rs  integration_tests.rs  test_accessors.rs  test_constructors.rs  test_edge_cases.rs  test_info.rs  test_io.rs  test_row_ops.rs
crates/grpo_rewards/src/: lib.rs  main.rs  plugin_loader.rs  rewards.rs
grpo_rewards/: pyproject.toml
plugins/template/: Cargo.toml
