[package]
name = "data_preparation"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tch = "0.15.0"
safetensors = "0.3.3"
ndarray = "0.15" 
serde = { version = "1.0", features = ['derive']}
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"